--- a/lit/templates/base.html
+++ b/lit/templates/base.html
@@ -4,18 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% block title %}CLB Robot & Công Nghệ{% endblock %}</title>
+  <script src="https://cdn.jsdelivr.net/npm/froala-editor@4.1.4/js/languages/vi.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href='https://cdn.jsdelivr.net/npm/froala-editor@latest/css/froala_editor.pkgd.min.css' rel='stylesheet' type='text/css' />
+<script type='text/javascript' src='https://cdn.jsdelivr.net/npm/froala-editor@latest/js/froala_editor.pkgd.min.js'></script>
   <style>
-    body { padding-top: 70px; }
     .nav-link.active { font-weight: bold; }
     .content img { max-width: 100%; height: auto; }
   </style>
+  <script src="ckeditor5/ckeditor5.js"></script>
 </head>
 <body>
 
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="margin-bottom: -20px;background-color: brown;">
   <div class="container">
-    <a class="navbar-brand" href="{% url 'home' %}">CLB Robot & Công Nghệ</a>
+    <a class="navbar-brand title-1" href="{% url 'home' %}">LIT STEM CLUB</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -34,6 +37,9 @@
   </div>
 </nav>
 
+{% block hero %}{% endblock %}
+
+
 <div class="container content">
   {% if message %}
     <div class="alert alert-success alert-dismissible fade show" role="alert">
@@ -47,9 +53,8 @@
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
   {% endif %}
-  
   {% block content %}
-  {% endblock %}
+    {% endblock %}
 </div>
 
 <footer class="bg-dark text-white text-center py-3 mt-5">
